--- a/friend/friend.vcxproj
+++ b/friend/friend.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{8f78b47b-917c-4b97-aff5-334ca0195220}</ProjectGuid>
     <RootNamespace>friend</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>friendfuntion</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
